# prat-mack-project

./: README.md
.github/workflows/: auto-pr.yml  infra-apply-main.yml  infra-ci.yml  lambda-build.yml
arduino/include/: credentials.h
arduino/src/: main.ino
frontend/: deploy.sh
frontend/public/: index.html
frontend/src/: main.js
lambda/: Makefile  pyproject.toml  requirements.txt
lambda/app/: handler.py
lambda/app/domain/: models.py
lambda/app/gateways/: dynamodb_gateway.py  sns_gateway.py
lambda/app/services/: agua_service.py
lambda/tests/: test_handler.py
terraform/: frontend_file.tf  kms.tf  lambda.tf  main.tf  outputs.tf  state.tf  terraform.tfvars  variables.tf
